--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color:aliceblue;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 20px;
+}
