--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,13 @@ h1 {
   text-align: center;
   margin-top: 20px;
 }
+
+/* Calculator Styles */
+#calculator {
+  width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #630707;
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.1);
+}
