--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,25 @@ h1 {
 
 /* Calculator Styles */
 #calculator {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 400px;
   margin: 20px auto;
   padding: 20px;
   border-radius: 5px;
   background-color: #630707;
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.1);
+}
+#calculator > #display {
+  width: 100%;
+  height: 60px;
+  margin-bottom: 20px;
+  padding: 10px;
+  font-size: 2em;
+  text-align: right;
+  border: none;
+  border-radius: 5px;
+  background-color: #d8cb13;
 }
