--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,28 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  background-color:aliceblue;
-}
-
-h1 {
-  text-align: center;
-  margin-top: 20px;
-}
-
-/* Calculator Styles */
-#calculator {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 400px;
-  margin: 20px auto;
-  padding: 20px;
-  border-radius: 5px;
-  background-color: #630707;
-  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.1);
-}
-#calculator > #display {
+.container {
   width: 100%;
+  height: 100vh;
+  background: lightblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.calculator {
+  background: lightgreen;
+  padding: 20px;
+  border-radius: 10px;
+}
+.calculator form input {
+  border: 0;
+  outline: 0;
+  width: 60px;
   height: 60px;
-  margin-bottom: 20px;
-  padding: 10px;
-  font-size: 2em;
-  text-align: right;
-  border: none;
-  border-radius: 5px;
-  background-color: #d8cb13;
+  border-radius: 10px;
+  box-shadow: -8px -8px 16px rgba(255, 255, 255, 0.1), 5px 5px 16px rgba(0, 0, 0, 0.2);
 }
