--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 .container {
   width: 100%;
   height: 100vh;
-  background: lightblue;
+  background: whitesmoke;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,5 +24,10 @@
   width: 60px;
   height: 60px;
   border-radius: 10px;
-  box-shadow: -8px -8px 16px rgba(255, 255, 255, 0.1), 5px 5px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.2);
+  background: transparent;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+  margin: 10px;
 }
