--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
   justify-content: center;
 }
 .calculator {
-  background: lightgreen;
+  background: rgb(0, 158, 0);
   padding: 20px;
   border-radius: 10px;
 }
@@ -23,6 +23,7 @@
   outline: 0;
   width: 60px;
   height: 60px;
+  border: 2px solid rgb(38, 109, 24);
   border-radius: 10px;
   box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.2);
   background: transparent;
@@ -38,8 +39,13 @@ form .display {
   margin: 20px 0;
 }
 form .display input {
+  background: white;
+  color: black;
   text-align: right;
   flex: 1;
   font-size: 45px;
   box-shadow: none;
+}
+form input.equal {
+  width: 145px;
 }
